# Hypertuning-Ray-Marcello-Wienhoven

./: .gitignore  DONT_CHANGE_orig_training.toml  README.md  config.toml  hypertune.py  load_data.py  main.py  mlflow.db  pyproject.toml  ray_analysis.py  train.py
mlruns/1/03de9a5f74134a15ac7de58a15273c28/artifacts/pytorch_models/: cnn_flowers102.pt
mlruns/1/15eb13abe5f44de0aeb5b5915e797dcd/artifacts/pytorch_models/: cnn_flowers102.pt
mlruns/1/3db3d7870c4d4a1bbfff45c349b26187/artifacts/pytorch_models/: 20260112-133406_model.pt
mlruns/1/4b3b4cb695d74f418367f0c2c2cd9701/artifacts/pytorch_models/: 20260112-132309_model.pt
mlruns/1/56e8b6b6e4fc49ec9da841397a97981f/artifacts/pytorch_models/: 20260112-132244_model.pt
mlruns/1/bb5aee7159bf46adb573c0ec11921c34/artifacts/pytorch_models/: 20251129-005325_model.pt
mlruns/1/f384e2a4e689417e9d434e48550c00d5/artifacts/pytorch_models/: cnn_flowers102.pt
models/: 20251129-005232_model.pt  20251129-005257_model.pt  20260112-112952_model.pt  20260112-113155_model.pt  20260112-121351_model.pt  20260112-122322_model.pt  20260112-122540_model.pt  20260112-132335_model.pt  20260112-133313_model.pt  20260112-133338_model.pt  20260112-134249_model.pt  20260112-143517_model.pt  20260112-143528_model.pt  20260112-144228_model.pt  20260112-144247_model.pt  20260112-145342_model.pt  20260112-145353_model.pt  20260112-145404_model.pt  20260112-145632_model.pt  20260112-145644_model.pt  20260112-145830_model.pt  20260112-150017_model.pt  20260112-150030_model.pt  20260112-150134_model.pt  20260112-150328_model.pt  20260112-150536_model.pt  20260112-150547_model.pt  20260112-150558_model.pt  20260112-150659_model.pt  20260112-150754_model.pt  20260112-150805_model.pt  20260112-150845_model.pt  20260112-150856_model.pt  20260112-150907_model.pt  20260112-151208_model.pt  20260112-151317_model.pt  20260112-151532_model.pt  20260112-151629_model.pt  20260112-151651_model.pt  20260112-151906_model.pt  (+6 more)
src/: config.py  dataloader.py
src/ingest/: dataloader.py  dataset_flowers.py
src/models/: cnn.py
src/training/: load_dataloader.py  mlflow_utils.py  model.py  objective.py  train_utils.py  trainer.py
(+49 files in other folders)
