[project]
name = "hypertuning-ray-marcello-wienhoven"
version = "0.1.0"
description = "A flower classification model with hypertuning (without Ray on Windows)."
authors = [
    { name = "Marcello Wienhoven", email = "M.Wienhoven@student.han.nl" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "hyperopt>=0.2.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mltrainer>=0.2.5",
    "pandas>=2.3.3",
    "numpy==1.26.4", 
    "scipy>=1.16.3",
    "tensorboard>=2.20.0",
    "toml>=0.10.2",
    "torch==2.1.2",
    "torchinfo>=1.8.0",
    "torchvision==0.16.2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    {index = "pytorch"},
]
