[project]
name = "hypertuning-ray-marcello-wienhoven"
version = "0.1.0"
description = "A flower classification model with hypertuning (without Ray on Windows)."
authors = [
    { name = "Marcello Wienhoven", email = "M.Wienhoven@student.han.nl" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "torch==2.0.1+cpu",
    "torchvision==0.15.2+cpu",
    "numpy==1.26.4",
    "loguru>=0.7.0",
    "scipy>=1.11.1",
    "mltrainer>=0.2.4",
    "tensorboard>=2.15.1",
    "matplotlib>=3.7.1",
    "pandas>=2.0.3",
    "torchinfo>=1.8.0",
    "toml>=0.10.2",
    "hyperopt>=0.2.7",
    "ray>=2.51.1",
    "seaborn>=0.13.2",
    "plotly>=6.5.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = false

[tool.uv]
index-strategy = "unsafe-best-match"
